2005-02-04  Christian Hitz  <chhitz@gmx.net>

	* scm/scm/define-markup-commands.scm (fill-line): rework for better
	alignment with centered texts

	* scm/stencil.scm (stack-stencils-padding-list): new function, takes a
	list of paddings

2005-02-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/GNUmakefile ($(outdir)/lilypond.map): add aybabtu to .map file.

	* lily/note-column.cc (translate_rests): call flush_extent_cache()
	of parents when translating rests. Fixes: c-chord-rest.ly 

	* lily/include/dimension-cache.hh (struct Dimension_cache): add
	dimension_callback_ member.

	* lily/grob.cc (flush_extent_cache): new function. Force recompute
	of extents.

2005-02-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* all but lily/*: The grand 2004/2005 replace.

2005-02-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/*: add space after ,  

	* scm/music-functions.scm (has-request-chord): don't use
	ly:music-name anywhere. Fixes <<\\>> notation. 

	* scm/define-markup-commands.scm (box): use font-size for
	padding. Fixes boxed-rehearsal-marks.ly

	* lily/parser.yy (assignment_id): allow LYRICS_STRING as
	identifier definition too, so foo = \lyrics { ...   } bar = #1
	doesn't complain about "bar" being LYRICS_STRING.

	* lily/paper-def.cc (find_pango_font): new routine; Store
	pango_fonts in hash tab too. This is necessary for retrieving
	Pango_fonts::physical_font_tab() later on.
 
	* lily/pango-font.cc (pango_item_string_stencil): bugfix: don't
	crash if psname is null.

	* lily/lily-guile.cc (ly_hash2alist): new function

	* Documentation/user/changing-defaults.itely (Text encoding):
	rewrite. 

	* lily/pango-font.cc (physical_font_tab): new member. Store PSname
	-> font_filename mapping.

	* lily/pango-font-scheme.cc (LY_DEFINE): new file. New function
	ly_pango_font_physical_fonts

	* scm/framework-ps.scm (supplies-or-needs): extract names from
	physical Pango_fonts.

	* utf8.ly: new file.

2005-02-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
