@@ -11,6 +11,7 @@ Graham Percival   - Documentation Editor
 
 CONTRIBUTORS
 
+Christian Hitz
 Erlend Aasland
 Arno Waschk
 Carl Sorensen
