@@ -1,3 +1,10 @@
+2005-02-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* input/regression/fill-line-test.ly: new file.
+
+	* buildscripts/gen-emmentaler-scripts.py (i): insert dash in
+	emmentaler name, eg. emmentaler-23. 
+
 2005-02-04  Christian Hitz  <chhitz@gmx.net>
 
 	* scm/scm/define-markup-commands.scm (fill-line): rework for better
